required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- Union Layer: Add support for the layer FILTER expressions, 
  add "Union:SourceLayerVisible" predefined attribute (#3674)

- fix circle layer drawing for edge case when point1.x==point2.x (#1356)

- fix incorrect quantization for images with very large number of
  colors (#3848)

- fix poor performance of polygon hatching (#3846)

- upgrade clipper library to 4.2 (related to #3846)

- Fix configure output for "WFS Client" (was reporting WMS info, #3842)

- KML: latlon bbox for raster layers could end up being wrong for non-square
  requests (#3840)

Version 6.0.0-beta6 (2011-04-13)
--------------------------------

- define EQUAL/EQUALN macros if cpl_port.h was not included (#3844)

- add configurable PNG/ZLIB compression level (#3841)

- SLD: use pixmap size when parameter size is not specified (#2305)

- fix memory leaks in mapgraticule.c (#3831)

- fix runtime sub validation against web metadata, was using wrong lookup key

- clean up the symbolset if we've used an alternate renderer for a 
  layer (#3834,#3616)

- fix crash on embeded legend with cairo raster renderer

- fix crashes in SVG renderer on polygon symbol fills (#3837)

- fix crash/corruptions with raster layers in pdf outputs (#3799)

- fix memory leak in msFreeLabelCacheSlot (#3829)

- use a circle brush for wide GD lines (#3835)

- fix segmentation fault with transparent layers containing symbols (#3834)

- fix memory leak on tiled vector polygons

- fix segfault with marker symbols on short lines (#3823)

- wms_getmap_formatlist causes first defined outputformat to be returned by 
  getmap (#3826)
